[package]
name = "wave"
version = "0.0.1"
edition = "2018"
authors = ["Gustavo Ordaz <ordazsgustavo@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A JavaScript package manager"
readme = "README.md"
homepage = "https://github.com/ordazgustavo/wave"
repository = "https://github.com/ordazgustavo/wave"
keywords = ["cli", "packages", "javascript"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = { version = "0.3", features = [ "paw" ] }
paw = "1.0"
